fix(mobile): sync issue due to time mismatch
