# cli/src/api/open-api/api.ts
@@ -879,6 +879,12 @@ export interface AuditDeletesResponseDto {
      * @memberof AuditDeletesResponseDto
      */
     'needsFullSync': boolean;
+    /**
+     * 
+     * @type {string}
+     * @memberof AuditDeletesResponseDto
+     */
+    'timeOfRequest'?: string;
 }
 /**
  * 
