# server/immich-openapi-specs.json
@@ -6108,6 +6108,10 @@
           },
           "needsFullSync": {
             "type": "boolean"
+          },
+          "timeOfRequest": {
+            "format": "date-time",
+            "type": "string"
           }
         },
         "required": [
